# HUAWEI

PythonCode/: Feature_identification.py  Feature_identification_V2.py  dataVisualisation.py  main.py  test.pkl
PythonCode/Classifier/: Feature_identification.py  classification.py  data_analysis.py  data_io.py  interference_analysis.py
PythonCode/ros2_test/: core_Enemy.csv  linear_Enemy.csv  loops_E.csv  loops_Enemy.csv  nnest_PMC.csv  nnet_Enemy.csv  parser_E.csv  parser_Enemy.csv  radix_Enemy.csv  sha_Enemy.csv  zip_Enemy.csv
PythonCode/ros2_train/: core_E.csv  core_PMC.csv  linear_E.csv  linear_PMC.csv  loops_PMC.csv  nnet_E.csv  parser_PMC.csv  radix_E.csv  sha_E.csv  zip_E.csv  zip_PMC.csv
ROS2_CoreMarkPro_Src/: CMakeLists.txt  monitor.cpp  package.xml  workload_0.cpp  workload_1.cpp  workload_1E.cpp  workload_1Enemy.cpp  workload_2.cpp  workload_2E.cpp  workload_2Enemy.cpp  workload_3.cpp  workload_3E.cpp  workload_3Enemy.cpp  workload_4.cpp  workload_4E.cpp  workload_4Enemy.cpp  workload_5.cpp  workload_5E.cpp  workload_5Enemy.cpp  workload_6.cpp  workload_6E.cpp  workload_6Enemy.cpp  workload_7.cpp  workload_7E.cpp  workload_7Enemy.cpp  workload_8.cpp  workload_8E.cpp  workload_8Enemy.cpp
data/: core_0.csv  core_1.csv  core_2.csv  core_3.csv  core_4.csv  core_5.csv  core_6.csv  core_7.csv  core_8.csv  core_9.csv  core_PMC.csv  core_all_10.csv  core_all_5.csv  linear_0.csv  linear_1.csv  linear_2.csv  linear_3.csv  linear_4.csv  linear_5.csv  linear_6.csv  linear_7.csv  linear_8.csv  linear_9.csv  linear_PMC.csv  linear_all_10.csv  linear_all_5.csv  loops_0.csv  loops_1.csv  loops_2.csv  loops_3.csv  loops_4.csv  loops_5.csv  loops_6.csv  loops_7.csv  loops_8.csv  loops_9.csv  loops_PMC.csv  loops_all_10.csv  loops_all_5.csv  nnest_0.csv  (+63 more)
